<resources>
    <string name="app_name" translatable="false">ApiConnection</string>
    <string name="body_text" translatable="false">This is Body text\t\t</string>
    <string name="Title" translatable="false">Title</string>
    <string name="chartRating" translatable="false">ChartRating</string>
    <string name="title" translatable="false">Title</string>
    <string name="id" translatable="false">ID</string>
    <string name="url" translatable="false">Url</string>
    <string name="year" translatable="false">year</string>
    <string name="MoviePoster" translatable="false">MoviePoster</string>
    <string name="movies_header" translatable="false">Search Movies</string>
    <string name="plainText" translatable="false">Plain Text Holder</string>
    <string name="averageRating" translatable="false">AvgRt</string>
    <string name="totalVotes" translatable="false">TotVote</string>
    <string name="outOf10" translatable="false">/10\n</string>
    <string name="type" translatable="false">Type</string>
    <string name="series" translatable="false"/>
    <string name="Season" translatable="false">Season\n</string>
    <string name="Episode" translatable="false">episode</string>
    <string name="empty" translatable="false"/>
    <string name="menu" translatable="false">Menu</string>
    <string name="movies_database" translatable="false">Movies Database</string>
    <string name="upcoming" translatable="false">Upcoming</string>
    <string name="profile" translatable="false">Profile</string>
    <string name="search" translatable="false">Search</string>
    <string name="view" translatable="false">View</string>
    <string name="home" translatable="false">Home</string>
    <string name="switch_dark_theme" translatable="false">Dark Theme</string>
    <string name="dark_theme" translatable="false">Dark Theme</string>
    <string name="date" translatable="false">date</string>
    <string name="discover" translatable="false">Discover</string>
    <string name="my_movies" translatable="false">My Movies</string>
    <string name="my_series" translatable="false">My Series</string>
    <string name="notifications" translatable="false">Notifications</string>
    <string name="account_settings" translatable="false">Account Settings</string>
    <string name="payment_method" translatable="false">Payment Method</string>
    <string name="username" translatable="false">Username</string>
    <string name="settings" translatable="false">Settings</string>
    <string name="giga" translatable="false">Giga Chad</string>
    <string name="welcome_you_are_logged_in" translatable="false">Welcome, You are logged in</string>
    <string name="logout" translatable="false">Logout</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="login" translatable="false">Login</string>
    <string name="email" translatable="false">Email</string>
    <string name="password" translatable="false">Password</string>
    <string name="not_registered_yet" translatable="false">Not registered yet</string>
    <string name="register_here" translatable="false">Register here</string>
    <string name="button" translatable="false">Button</string>
    <string name="name" translatable="false">Name:</string>
    <string name="surname" translatable="false">Surname:</string>
    <string name="save" translatable="false">Save</string>
    <string name="exampleEmail">example@example.com</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="favorite">favourate_image</string>
    <string name="favorite_txt">Favorites:</string>

</resources>