<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:alpha="0.15"
                android:importantForAccessibility="no" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp">

                <TextView
                    android:id="@+id/plainTextTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:layout_marginTop="60dp"
                    android:text="@string/plainText"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/typeTextView" />


                <TextView
                    android:id="@+id/titleTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/Title"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/yearTextView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@id/imageView"
                    app:layout_constraintTop_toTopOf="@+id/guideline2"
                    app:layout_constraintVertical_bias="1.0"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/yearTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="92dp"
                    android:text="@string/year"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toTopOf="@+id/barrier3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@id/imageView" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="58dp"
                    android:layout_height="58dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="4dp"
                    android:contentDescription="@string/url"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toTopOf="@+id/idTextView"
                    app:layout_constraintEnd_toStartOf="@+id/averageRatingTextView"
                    app:layout_constraintStart_toEndOf="@+id/imageView"
                    app:layout_constraintTop_toBottomOf="@+id/barrier3"
                    app:srcCompat="@drawable/ic_launcher_background"
                    tools:ignore="ImageContrastCheck" />

                <TextView
                    android:id="@+id/averageRatingTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginTop="6dp"
                    android:text="@string/averageRating"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="22.5sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/outOf10"
                    app:layout_constraintStart_toEndOf="@+id/imageView3"
                    app:layout_constraintTop_toBottomOf="@+id/barrier3" />

                <TextView
                    android:id="@+id/outOf10"
                    android:layout_width="29dp"
                    android:layout_height="24dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="0dp"
                    android:text="@string/outOf10"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="17sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/barrier3" />

                <TextView
                    android:id="@+id/numVotesTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:text="@string/totalVotes"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toTopOf="@+id/idTextView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/imageView3"
                    app:layout_constraintTop_toBottomOf="@+id/averageRatingTextView"
                    app:layout_constraintVertical_bias="0.0" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="0dp"
                    android:layout_height="300dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="32dp"
                    android:importantForAccessibility="no"
                    android:scaleType="fitCenter"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.50"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/idTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/id"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="17sp"
                    app:layout_constraintBottom_toTopOf="@+id/typeTextView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/imageView"
                    app:layout_constraintTop_toBottomOf="@+id/imageView3"
                    app:layout_constraintVertical_bias="1.0" />

                <TextView
                    android:id="@+id/typeTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="48dp"
                    android:text="@string/type"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="17sp"
                    app:layout_constraintBottom_toTopOf="@+id/guideline"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/imageView"
                    app:layout_constraintTop_toBottomOf="@+id/idTextView" />


                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_begin="375dp" />


                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="254dp" />


                <androidx.core.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/recyclerViewSeasons">


                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerViewSeries"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager" />
                </androidx.core.widget.NestedScrollView>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewSeasons"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/plainTextTextView" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_begin="32dp" />


                <androidx.constraintlayout.widget.Barrier
                    android:id="@+id/barrier3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:barrierDirection="top"
                    app:layout_constraintTop_toBottomOf="@id/yearTextView"
                    app:constraint_referenced_ids="imageView3" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </FrameLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>